# datalog-evaluate-rules

./: CMakeLists.txt  Database.h  Header.h  Interpreter.h  P4  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Tuple.h  a.out  lab4
Lab4PassOffCases/: out.txt
lab4.dSYM/Contents/Resources/DWARF/: lab4
