cmake_minimum_required(VERSION 3.23)
project(datalog-eval-rule-project)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(datalog-eval-rule-project
        AddAutomaton.cpp
        AddAutomaton.h
        Automaton.h
        ColonAutomaton.cpp
        ColonAutomaton.h
        ColonDashAutomaton.cpp
        ColonDashAutomaton.h
        CommaAutomaton.cpp
        CommaAutomaton.h
        CommentAutomaton.cpp
        CommentAutomaton.h
        Database.h
        DatalogProgram.cpp
        DatalogProgram.h
        EOFAutomaton.cpp
        EOFAutomaton.h
        FactsAutomaton.cpp
        FactsAutomaton.h
        Header.h
        IDAutomaton.cpp
        IDAutomaton.h
        Interpreter.h
        LeftParenAutomaton.cpp
        LeftParenAutomaton.h
        Lexer.cpp
        Lexer.h
        main.cpp
        MultiplyAutomaton.cpp
        MultiplyAutomaton.h
        Parameter.cpp
        Parameter.h
        Parser.cpp
        Parser.h
        PeriodAutomaton.cpp
        PeriodAutomaton.h
        Predicate.cpp
        Predicate.h
        QueriesAutomaton.cpp
        QueriesAutomaton.h
        QuestionAutomaton.cpp
        QuestionAutomaton.h
        Relation.cpp
        Relation.h
        RightParenAutomaton.cpp
        RightParenAutomaton.h
        Rule.cpp
        Rule.h
        RulesAutomaton.cpp
        RulesAutomaton.h
        SchemesAutomaton.cpp
        SchemesAutomaton.h
        StringAutomaton.cpp
        StringAutomaton.h
        Token.cpp
        Token.h
        Tuple.h)
